# fastapi-clean-architecture

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
alembic/: env.py
app/: config.py  main.py  settings.py
app/api/: api.py
app/api/routes/: test.py
app/api/schemas/: user.py
app/db/models/: __init__.py  user.py
src/application/: exceptions.py
src/application/interactors/: login_user.py  logout_user.py  register_user.py
src/application/interfaces/: id_generator.py  id_provider.py  request_manager.py  session_manager.py  session_repository.py  token_processor.py  user_repository.py
src/domain/entities/: session.py  user.py
src/domain/exceptions/: access.py
src/infrastructure/adapters/: fastapi_request_manager.py  session_identity_provider.py  token.py
src/infrastructure/database/: commiter.py  committer.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 5818ad6c5841_create_users_table.py
src/infrastructure/database/models/: __init__.py  session.py  user.py
src/infrastructure/database/repositories/: session.py  user.py
src/infrastructure/database/tables/: __init__.py  base.py  session.py
src/infrastructure/services/: token.py
src/main/: app.py  config.py  settings.py
src/main/dependencies/: main.py
src/main/ioc/: main.py
src/main/ioc/providers/: adapter.py  database.py  interactor.py  repository.py  service.py
src/presentation/: exceptions.py
src/presentation/controllers/: auth.py  test.py
