[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["bodaue"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.3.4"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi = { extras = ["uvicorn"], version = "^0.112.1" }
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
ruff = "^0.5.1"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
follow_imports = "normal"
show_error_context = false
pretty = true
ignore_missing_imports = false

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "B", "UP", "SIM", "N", "YTT", "ANN", "ASYNC", "S", "A", "COM", "C4",
    "DTZ", "T10", "EM", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q",
    "RSE", "RET", "SLF", "SLOT", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA",
    "PLC", "PLE", "PLW", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"
]
ignore = [
    "ANN101", "ANN102", "ANN401", "RET502", "RET503", "S113", "RUF001"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
