[tool.poetry]
name = "FastAPI Clean Architecture"
version = "0.1.0"
description = ""
authors = ["bodaue"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.0"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
follow_imports = "normal"
show_error_context = false
pretty = true
ignore_missing_imports = false

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "RUF001", "RUF002", "RUF003", "RUF012",
    "COM812", "ISC001",
    "D",
    "RET502", "RET503",
    "ANN401",
    "I001", "INP001",
    "FBT001", "FBT002",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
